feat: добавить блока навигации

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,39 @@
           <a class="header__address-container" href="/address">
             <div class="header__address-logo"></div>
             <div>
-              <p class="header__address-name">Челябинск, Валдайская 17а</p>
+              <p class="header__address-name">Челябинск, Монтажников, 1/3 </p>
               <p class="header__address-viewing">Посмотреть на карте</p>
             </div>
           </a>
+        </div>
+        <div class="navigation">
+          <button class="navigation__button-menu navigation__button-menu_close"></button>
+            <nav class="navigation__container">
+              <ul class="navigation__links">
+                <li>
+                  <a href="/about-as" class="navigation__link">О НАС</a>
+                </li>
+                <li>
+                  <a href="/services" class="navigation__link">УСЛУГИ</a>
+                </li>
+                <li>
+                  <a href="/prices" class="navigation__link">ПРАЙС</a>
+                </li>
+                <li>
+                  <a href="/promotions" class="navigation__link">АКЦИИ</a>
+                </li>
+                <li>
+                  <a href="/blog" class="navigation__link">БЛОГ</a>
+                </li>
+                <li>
+                  <a href="/contacts" class="navigation__link">КОНТАКТЫ</a>
+                </li>
+                <li>
+                  <a href="/address" class="navigation__link">АДРЕС</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="navigation__overlay"></div>
         </div>
       </div>
     </div>
