feat: добавить секции main и about-as

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,68 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <div class="main__background"></div>
+    <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1>
+    <section class="main__container">
+      <div class="main__title-container">
+        <div class="main__title-icon main__title-icon_red"></div>
+        <h2 class="main__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h2>
+      </div>
+      <div class="main__title-container">
+        <div class="main__title-icon main__title-icon_black"></div>
+        <h2 class="main__title-text">Использование официальной технической<br />документации и специнструмента</h2>
+      </div>
+      <div class="main__title-container">
+        <div class="main__title-icon main__title-icon_black"></div>
+        <h2 class="main__title-text">Обслуживание автомобилей других марок</h2>
+      </div>
+    </section>
+    <section class="about-as" aria-label="Наши мастера и ценности">
+      <div class="about-as__container">
+        <ul class="about-as__masters">
+          <li>
+            <a href="https://vk.com/ibasalygin" target="_blank" class="about-as__master">
+              <img class="about-as__photo" src="./images/master-basalygin.jpg" alt="Басалыгин Иван, моторист">
+              <p class="about-as__name">Басалыгин Иван</p>
+              <p class="about-as__job">моторист</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://vk.com/dimagonchrov" target="_blank" class="about-as__master">
+              <img class="about-as__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик">
+              <p class="about-as__name">Гончаров Дмитрий</p>
+              <p class="about-as__job">механик</p>
+            </a>
+          </li>
+          <li>
+            <a href="https://vk.com/shifer96" target="_blank" class="about-as__master">
+              <img class="about-as__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност">
+              <p class="about-as__name">Плисовских Алексей</p>
+              <p class="about-as__job">диагност</p>
+            </a>
+          </li>
+        </ul>
+        <ul class="about-as__tagets">
+          <li class="about-as__taget">
+            Мы за честность и открытость - любой клиент может увидеть как мы работаем и присутствовать при ремонте.
+          </li>
+          <li class="about-as__taget">
+            Мы несем личную ответственность за качество выполняемого ремонта и это отличная мотивация делать все качественно.
+          </li>
+          <li class="about-as__taget">
+            За вами выбор - установить ваши запчасти или положиться на нас за покупку запчастей и материалов.
+          </li>
+          <li class="about-as__taget">
+            Предложим варианты запчастей от бюджетных до оригинальных по вашему предпочтению.
+          </li>
+          <li class="about-as__taget">
+            Имеем опыт работы в диллерских сервисных центрах VAG группы.
+          </li>
+        </ul>
+      </div>
+    </section >
+  </main>
 </body>
 
 </html>
