feat: добавить секцию про услуги

--- a/src/index.html
+++ b/src/index.html
@@ -41,32 +41,32 @@
         </div>
         <div class="navigation">
           <button class="navigation__button-menu navigation__button-menu_close"></button>
-            <nav class="navigation__container">
-              <ul class="navigation__links">
-                <li>
-                  <a href="/about-as" class="navigation__link">О НАС</a>
-                </li>
-                <li>
-                  <a href="/services" class="navigation__link">УСЛУГИ</a>
-                </li>
-                <li>
-                  <a href="/prices" class="navigation__link">ПРАЙС</a>
-                </li>
-                <li>
-                  <a href="/promotions" class="navigation__link">АКЦИИ</a>
-                </li>
-                <li>
-                  <a href="/blog" class="navigation__link">БЛОГ</a>
-                </li>
-                <li>
-                  <a href="/contacts" class="navigation__link">КОНТАКТЫ</a>
-                </li>
-                <li>
-                  <a href="/address" class="navigation__link">АДРЕС</a>
-                </li>
-              </ul>
-            </nav>
-            <div class="navigation__overlay"></div>
+          <nav class="navigation__container">
+            <ul class="navigation__links">
+              <li>
+                <a href="/about-as" class="navigation__link">О НАС</a>
+              </li>
+              <li>
+                <a href="/services" class="navigation__link">УСЛУГИ</a>
+              </li>
+              <li>
+                <a href="/prices" class="navigation__link">ПРАЙС</a>
+              </li>
+              <li>
+                <a href="/promotions" class="navigation__link">АКЦИИ</a>
+              </li>
+              <li>
+                <a href="/blog" class="navigation__link">БЛОГ</a>
+              </li>
+              <li>
+                <a href="/contacts" class="navigation__link">КОНТАКТЫ</a>
+              </li>
+              <li>
+                <a href="/address" class="navigation__link">АДРЕС</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="navigation__overlay"></div>
         </div>
       </div>
     </div>
@@ -118,7 +118,8 @@
             Мы за честность и открытость - любой клиент может увидеть как мы работаем и присутствовать при ремонте.
           </li>
           <li class="about-as__taget">
-            Мы несем личную ответственность за качество выполняемого ремонта и это отличная мотивация делать все качественно.
+            Мы несем личную ответственность за качество выполняемого ремонта и это отличная мотивация делать все
+            качественно.
           </li>
           <li class="about-as__taget">
             За вами выбор - установить ваши запчасти или положиться на нас за покупку запчастей и материалов.
@@ -131,7 +132,38 @@
           </li>
         </ul>
       </div>
-    </section >
+    </section>
+    <section class="services" aria-label="Наши основные услуги">
+      <div class="services__container">
+        <div class="services__grid">
+          <a class="services__grid-item" href="#">
+            <img class="services__grid-img" src="./images/service-engine.png" alt="Ремонт двигателя" />
+            <div class="services__grid-circel"></div>
+            <h3 class="services__grid-title">Ремонт двигателя</h3>
+          </a>
+          <a class="services__grid-item" href="#">
+            <img class="services__grid-img" src="./images/service-chassis.png" alt="Ремонт ходовой" />
+            <div class="services__grid-circel"></div>
+            <h3 class="services__grid-title">Ремонт ходовой</h3>
+          </a>
+          <a class="services__grid-item" href="#">
+            <img class="services__grid-img" src="./images/service-transmission.png" alt="Ремонт КПП" />
+            <div class="services__grid-circel"></div>
+            <h3 class="services__grid-title">Ремонт КПП</h3>
+          </a>
+          <a class="services__grid-item" href="#">
+            <img class="services__grid-img" src="./images/service-to.png" alt="Плановое ТО" />
+            <div class="services__grid-circel"></div>
+            <h3 class="services__grid-title">Плановое ТО</h3>
+          </a>
+          <a class="services__grid-item" href="#">
+            <img class="services__grid-img" src="./images/service-diagnostics.png" alt="Диагностика" />
+            <div class="services__grid-circel"></div>
+            <h3 class="services__grid-title">Диагностика</h3>
+          </a>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
