feat: добавить секцию с ценами

--- a/src/index.html
+++ b/src/index.html
@@ -164,6 +164,110 @@
         </div>
       </div>
     </section>
+    <section className="prices" aria-label="Список работ и их стоимость">
+      <div class="prices__type-work">
+        <h2 class="prices__title">Двигатель</h2>
+        <ul class="prices__table">
+          <li class="prices__table-name prices__table-name_head">Наименование работ&nbsp;<span>Стоимость,&nbsp;₽</span>
+          </li>
+          <li class="prices__table-name">Замена ремня ГРМ&nbsp;<span class="prices__table-price">от 1500</span></li>
+          <li class="prices__table-name">Ремонт ГРМ&nbsp;<span class="prices__table-price">от 2500</span></li>
+          <li class="prices__table-name">Ремонт ЦПГ&nbsp;<span class="prices__table-price">от 5500</span></li>
+          <li class="prices__table-name">Замена помпы&nbsp;<span class="prices__table-price">от 2000</span></li>
+          <li class="prices__table-name">Замена генератора&nbsp;<span class="prices__table-price">от 2000</span></li>
+          <li class="prices__table-name">Замена ролика натяжителя&nbsp;<span class="prices__table-price">от
+              1000</span></li>
+          <li class="prices__table-name">Ремонт системы охлаждения&nbsp;<span class="prices__table-price">от
+              1000</span></li>
+          <li class="prices__table-name">Замена радиатора&nbsp;<span class="prices__table-price">от 2000</span></li>
+          <li class="prices__table-name">Ремонт системы питания&nbsp;<span class="prices__table-price">от 500</span>
+          </li>
+          <li class="prices__table-name">Ремонт системы зажигания&nbsp;<span class="prices__table-price">от 500</span>
+          </li>
+          <li class="prices__table-name">Ремонт выхлопной системы&nbsp;<span class="prices__table-price">от 500</span>
+          </li>
+          <li class="prices__table-name">Прочий мелкосрочный ремонт&nbsp;<span class="prices__table-price">расчет по
+              факту</span></li>
+        </ul>
+      </div>
+      <div class="prices__type-work">
+        <h2 class="prices__title">Ходовая часть</h2>
+        <ul class="prices__table">
+          <li class="prices__table-name prices__table-name_head">Наименование
+            работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
+          <li class="prices__table-name">Замена передних стоек&nbsp;<span class="prices__table-price">от 4000</span>
+          </li>
+          <li class="prices__table-name">Замена стоек стабилизатора&nbsp;<span class="prices__table-price">от
+              1500</span></li>
+          <li class="prices__table-name">Замена задних стоек&nbsp;<span class="prices__table-price">от 3000</span>
+          </li>
+          <li class="prices__table-name">Замена ступичного подшипника&nbsp;<span class="prices__table-price">от
+              1500</span></li>
+          <li class="prices__table-name">Замена сайлент-блоков&nbsp;<span class="prices__table-price">от 1000</span>
+          </li>
+          <li class="prices__table-name">Замена рулевой рейки&nbsp;<span class="prices__table-price">от 5000</span>
+          </li>
+          <li class="prices__table-name">Замена шаровых&nbsp;<span class="prices__table-price">от 1000</span></li>
+          <li class="prices__table-name">Замена тормозных дисков&nbsp;<span class="prices__table-price">от 1000</span>
+          </li>
+          <li class="prices__table-name">Замена тормозных колодок&nbsp;<span class="prices__table-price">от 500</span>
+          </li>
+          <li class="prices__table-name">Ремонт задней балки&nbsp;<span class="prices__table-price">от 1500</span>
+          </li>
+          <li class="prices__table-name">Прочий мелкосрочный ремонт&nbsp;<span class="prices__table-price">расчет по
+              факту</span></li>
+        </ul>
+      </div>
+      <div class="prices__type-work">
+        <h2 class="prices__title">Трансмиссия и КПП</h2>
+        <ul class="prices__table">
+          <li class="prices__table-name prices__table-name_head">Наименование
+            работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
+          <li class="prices__table-name">Замена МКПП&nbsp;<span class="prices__table-price">от 3000</span></li>
+          <li class="prices__table-name">Ремонт МКПП&nbsp;<span class="prices__table-price">от 5000</span></li>
+          <li class="prices__table-name">Замена АКПП&nbsp;<span class="prices__table-price">от 5000</span></li>
+          <li class="prices__table-name">Ремонт АКПП&nbsp;<span class="prices__table-price">от 7000</span></li>
+          <li class="prices__table-name">Замена сцепления&nbsp;<span class="prices__table-price">от 2500</span></li>
+          <li class="prices__table-name">Прочий мелкосрочный ремонт&nbsp;<span class="prices__table-price">расчет по
+              факту</span></li>
+        </ul>
+      </div>
+      <div class="prices__type-work">
+        <h2 class="prices__title">Плановое ТО</h2>
+        <ul class="prices__table">
+          <li class="prices__table-name prices__table-name_head">Наименование
+            работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
+          <li class="prices__table-name">Замена масла и фильтра&nbsp;<span class="prices__table-price">от 1000</span>
+          </li>
+          <li class="prices__table-name">Замена воздушных фильтров&nbsp;<span class="prices__table-price">от
+              500</span></li>
+          <li class="prices__table-name">Замена тормозной жидкости&nbsp;<span class="prices__table-price">от
+              1000</span></li>
+          <li class="prices__table-name">Замена свечей зажигания&nbsp;<span class="prices__table-price">от 500</span>
+          </li>
+          <li class="prices__table-name">Мойка радиаторов&nbsp;<span class="prices__table-price">от 2000</span></li>
+          <li class="prices__table-name">Прочий мелкосрочный ремонт&nbsp;<span class="prices__table-price">расчет по
+              факту</span></li>
+        </ul>
+      </div>
+      <div class="prices__type-work">
+        <h2 class="prices__title">Диагностика</h2>
+        <ul class="prices__table">
+          <li class="prices__table-name prices__table-name_head">Наименование
+            работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
+          <li class="prices__table-name">Просмотр ошибок через OBD&nbsp;<span class="prices__table-price">от
+              500</span></li>
+          <li class="prices__table-name">Устранение ошибок&nbsp;<span class="prices__table-price">от 1000</span></li>
+          <li class="prices__table-name">Восстановление электрики салона&nbsp;<span class="prices__table-price">от
+              1000</span></li>
+          <li class="prices__table-name">Восстановление электрики двигателя&nbsp;<span class="prices__table-price">от
+              2000</span></li>
+          <li class="prices__table-name">Смена прошивки ЭБУ&nbsp;<span class="prices__table-price">от 2000</span></li>
+          <li class="prices__table-name">Прочий мелкосрочный ремонт&nbsp;<span class="prices__table-price">расчет по
+              факту</span></li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 
