feat: добавить секцию про акции

--- a/src/index.html
+++ b/src/index.html
@@ -77,15 +77,15 @@
     <section class="main__container">
       <div class="main__title-container">
         <div class="main__title-icon main__title-icon_red"></div>
-        <h2 class="main__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h2>
+        <h3 class="main__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h3>
       </div>
       <div class="main__title-container">
         <div class="main__title-icon main__title-icon_black"></div>
-        <h2 class="main__title-text">Использование официальной технической<br />документации и специнструмента</h2>
+        <h3 class="main__title-text">Использование официальной технической<br />документации и специнструмента</h3>
       </div>
       <div class="main__title-container">
         <div class="main__title-icon main__title-icon_black"></div>
-        <h2 class="main__title-text">Обслуживание автомобилей других марок</h2>
+        <h3 class="main__title-text">Обслуживание автомобилей других марок</h3>
       </div>
     </section>
     <section class="about-as" aria-label="Наши мастера и ценности">
@@ -166,7 +166,7 @@
     </section>
     <section className="prices" aria-label="Список работ и их стоимость">
       <div class="prices__type-work">
-        <h2 class="prices__title">Двигатель</h2>
+        <h3 class="prices__title">Двигатель</h3>
         <ul class="prices__table">
           <li class="prices__table-name prices__table-name_head">Наименование работ&nbsp;<span>Стоимость,&nbsp;₽</span>
           </li>
@@ -191,7 +191,7 @@
         </ul>
       </div>
       <div class="prices__type-work">
-        <h2 class="prices__title">Ходовая часть</h2>
+        <h3 class="prices__title">Ходовая часть</h3>
         <ul class="prices__table">
           <li class="prices__table-name prices__table-name_head">Наименование
             работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
@@ -219,7 +219,7 @@
         </ul>
       </div>
       <div class="prices__type-work">
-        <h2 class="prices__title">Трансмиссия и КПП</h2>
+        <h3 class="prices__title">Трансмиссия и КПП</h3>
         <ul class="prices__table">
           <li class="prices__table-name prices__table-name_head">Наименование
             работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
@@ -233,7 +233,7 @@
         </ul>
       </div>
       <div class="prices__type-work">
-        <h2 class="prices__title">Плановое ТО</h2>
+        <h3 class="prices__title">Плановое ТО</h3>
         <ul class="prices__table">
           <li class="prices__table-name prices__table-name_head">Наименование
             работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
@@ -251,7 +251,7 @@
         </ul>
       </div>
       <div class="prices__type-work">
-        <h2 class="prices__title">Диагностика</h2>
+        <h3 class="prices__title">Диагностика</h3>
         <ul class="prices__table">
           <li class="prices__table-name prices__table-name_head">Наименование
             работ&nbsp;<span>Стоимость,&nbsp;₽</span></li>
@@ -267,6 +267,47 @@
               факту</span></li>
         </ul>
       </div>
+    </section>
+    <section class="promotions" aria-label="Наши акционные предложения">
+      <ul class="list">
+        <li class="list__item">
+          <img class="list__item-image" src="./images/promotions-car.jpg"
+            alt="Бесплатный подменный автомобиль на время ремонта">
+          <h3 class="list__item-title">Бесплатный подменный автомобиль на время ремонта</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">В случае длительного ремонта выходящего за оговоренный ранее срок, мы предоставим
+              подменный авто.</p>
+            <p class="list__item-text">Увеличение срока по причине клиента, задержке запасных частей и других
+              форс-мажоров не входит в акцию.</p>
+            <p class="list__item-text">Заправка, мойка и другие сопутствующие расходы связанные с подменным авто, на
+              период эксплуатации возлагаются на клиента.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/promotions-car-bottom.jpg"
+            alt="Бесплатный осмотр днища и ходовой части">
+          <h3 class="list__item-title">Бесплатный осмотр днища и ходовой части</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">При комплексном периодическом обслуживании с заменой масла и фильтров - осмотр
+              днища и ходовой части бесплатно.</p>
+            <p class="list__item-text">В осмотр днища входит визуальный осмотр на наличие серьезных повреждений, сильной
+              коррозии, нарушение целостности сварных швов.</p>
+            <p class="list__item-text">В осмотр ходовой части входит визульный осмотр целостности пыльников, наличие
+              люфтов, подтёков тормозной системы и системы питания.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/promotions-oil.png" alt="Масло на 10% дешевле">
+          <h3 class="list__item-title">Масло на 10% дешевле</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Мы работаем напрямую с крупными дистрибьюторами моторных масел, поэтому можем
+              предложить нашим клиентам дополнительную выгоду.</p>
+            <p class="list__item-text">Скидка на масло предоставляется при прохождении комплексного планового
+              обслуживания.</p>
+            <p class="list__item-text">Уточняйте текущее наличие марок масел и стоимость по телефону.</p>
+          </div>
+        </li>
+      </ul>
     </section>
   </main>
 </body>
