feat: добавить секцию blog

--- a/src/index.html
+++ b/src/index.html
@@ -309,6 +309,120 @@
         </li>
       </ul>
     </section>
+    <section className="blog" aria-label="Фото и описание наших работ">
+      <ul class="list">
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-1.jpg" alt="Volkswagen Polo 1.6">
+          <h3 class="list__item-title">Volkswagen Polo 1.6</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Клиент жаловался на то что не срабатывал вентилятор охлаждения двигателя и не
+              было зарядки от генератора, ранее автомобиль попадал в ДТП.</p>
+            <p class="list__item-text">После диагностики был выявлен участок электропроводки который имел неисправности
+              в виде обрыва проводов. Выполнив ремонт, мы убедились в работоспособности всех узлов, клиент доволен!</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-2.jpg" alt="Volkswagen Polo">
+          <h3 class="list__item-title">Volkswagen Polo</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Частая проблема - люфт в рулевой рейке справа.</p>
+            <p class="list__item-text">Установили ремкомплект втулок для рулевых реек.</p>
+            <p class="list__item-text">Заменили задние амортизаторы.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-3.jpg" alt="Toyota Avensis 1.8">
+          <h3 class="list__item-title">Toyota Avensis 1.8</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Выполнили плановое техническое обслуживание!</p>
+            <p class="list__item-text">Перед заменой масла выполнили раскосковку двигателя, так как клиент жаловался на
+              небольшой расход масла.</p>
+            <p class="list__item-text">Заменили масло, фильтра, осмотрели ходовую часть, есть недочеты, будем устранять.
+            </p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-4.jpg" alt="Skoda Fabia 1.2">
+          <h3 class="list__item-title">Skoda Fabia 1.2</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Заменили комплект цепи ГРМ.</p>
+            <p class="list__item-text">Напоминаем вам, что не стоит игнорировать посторонние звуки при запуске двигателя
+              после долгой стоянки, так как чаще всего это признак растянутой цепи.</p>
+            <p class="list__item-text">Эксплуатация автомобиля с такой неисправностью может привести к дорогостоящему
+              ремонту.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-5.jpg" alt="Skoda Octavia">
+          <h3 class="list__item-title">Skoda Octavia</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Диагностика ходовой части с последующей заменой рулевого наконечника.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-6.jpg" alt="Skoda Octavia">
+          <h3 class="list__item-title">Skoda Octavia</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Замена насоса ОЖ и его ремня.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-7.jpg" alt="Audi A4">
+          <h3 class="list__item-title">Audi A4</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Замена опор двигателя и передних наружных ШРУСов.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-8.jpg" alt="Mazda CX-7">
+          <h3 class="list__item-title">Mazda CX-7</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Клиента беспокоит повышенный расход масла и сизый дым из выхлопной трубы.</p>
+            <p class="list__item-text">Для начала проверили состояние турбокомпрессора, а затем заглянули в цилиндры
+              эндоскопом.</p>
+            <p class="list__item-text">Множественные задиры на цилиндрах говорят о том что требуется капитальный ремонт
+              двигателя.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-9.jpg" alt="Audi A5">
+          <h3 class="list__item-title">Audi A5</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Клиента беспокоил стук в задней части автомобиля в холодную погоду.</p>
+            <p class="list__item-text">Задефектовали задние амортизаторы.</p>
+            <p class="list__item-text">Подобрали, заказали и установили новые.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-10.jpg" alt="Volkswagen Touareg">
+          <h3 class="list__item-title">Volkswagen Touareg</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Замена пыльников передних наружных ШРУСов, пыльника шаровой нижнего рычага и
+              передних тормозных колодок.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-11.jpg" alt="Skoda Fabia">
+          <h3 class="list__item-title">Skoda Fabia</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Приехала на замену масла ДВС и фильтров.</p>
+            <p class="list__item-text">После нашего осмотра было решено мыть систему охлаждения и отопитель салона,
+              менять передние амортизаторы с опорами и передний сальник коленвала.</p>
+            <p class="list__item-text">Подобрали запчасти по выгодным ценам и произвели данные работы.</p>
+          </div>
+        </li>
+        <li class="list__item">
+          <img class="list__item-image" src="./images/blog-image-12.jpg" alt="Skoda Octavia">
+          <h3 class="list__item-title">Skoda Octavia</h3>
+          <div class="list__item-description">
+            <p class="list__item-text">Осмотр ходовой и поиск утечки ОЖ.</p>
+            <p class="list__item-text">В ходе осмотра выявлено: люфт тяг переднего стабилизатора, негерметичность насоса
+              ОЖ.</p>
+            <p class="list__item-text">Произвели замену тяг переднего стабилизатора, заказали насос ОЖ.</p>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
