feat: добавить секуию с контактами

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@
         </div>
       </div>
     </section>
-    <section className="prices" aria-label="Список работ и их стоимость">
+    <section class="prices" aria-label="Список работ и их стоимость">
       <div class="prices__type-work">
         <h3 class="prices__title">Двигатель</h3>
         <ul class="prices__table">
@@ -309,7 +309,7 @@
         </li>
       </ul>
     </section>
-    <section className="blog" aria-label="Фото и описание наших работ">
+    <section class="blog" aria-label="Фото и описание наших работ">
       <ul class="list">
         <li class="list__item">
           <img class="list__item-image" src="./images/blog-image-1.jpg" alt="Volkswagen Polo 1.6">
@@ -422,6 +422,37 @@
           </div>
         </li>
       </ul>
+    </section>
+    <section class="contacts" aria-label="Наши контакты">
+      <div class="contacts__container">
+        <h1 class="contacts__title">Свяжитесь с нами по интересующим Вас вопросам</h1>
+        <p class="contacts__work">График работы</p>
+        <p class="contacts__work">ПН - ПТ -&gt; 09:00 - 19:00</p>
+        <p class="contacts__work">СБ - ВС -&gt; 09:00 - 18:00</p>
+        <ul class="contacts__masters">
+          <li class="contacts__master">
+            <img class="contacts__photo" src="./images/master-basalygin.jpg" alt="Басалыгин Иван, моторист" />
+            <p class="contacts__name">Басалыгин Иван</p>
+            <p class="contacts__job">моторист</p>
+            <a href="https://vk.com/ibasalygin" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <div class="contacts__connection" id="1">+7 (951) 814-96-59 Показать телефон</div>
+          </li>
+          <li class="contacts__master">
+            <img class="contacts__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик" />
+            <p class="contacts__name">Гончаров Дмитрий</p>
+            <p class="contacts__job">механик</p>
+            <a href="https://vk.com/dimagonchrov" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <div class="contacts__connection" id="2">+7 (982) 114-11-94 : Показать телефон</div>
+          </li>
+          <li class="contacts__master">
+            <img class="contacts__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност" />
+            <p class="contacts__name">Плисовских Алексей</p>
+            <p class="contacts__job">диагност</p>
+            <a href="https://vk.com/shifer96" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <div class="contacts__connection" id="3">+7 (902) 605-47-42 Показать телефон</div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 </body>
