feat: добавить секцию с картой и футер

--- a/src/index.html
+++ b/src/index.html
@@ -434,27 +434,90 @@
             <img class="contacts__photo" src="./images/master-basalygin.jpg" alt="Басалыгин Иван, моторист" />
             <p class="contacts__name">Басалыгин Иван</p>
             <p class="contacts__job">моторист</p>
-            <a href="https://vk.com/ibasalygin" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <a href="https://vk.com/ibasalygin" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение
+              в VK</a>
             <div class="contacts__connection" id="1">+7 (951) 814-96-59 Показать телефон</div>
           </li>
           <li class="contacts__master">
             <img class="contacts__photo" src="./images/master-goncharov.jpg" alt="Гончаров Дмитрий, механик" />
             <p class="contacts__name">Гончаров Дмитрий</p>
             <p class="contacts__job">механик</p>
-            <a href="https://vk.com/dimagonchrov" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <a href="https://vk.com/dimagonchrov" target="_blank" rel="noreferrer"
+              class="contacts__connection">Сообщение в VK</a>
             <div class="contacts__connection" id="2">+7 (982) 114-11-94 : Показать телефон</div>
           </li>
           <li class="contacts__master">
             <img class="contacts__photo" src="./images/master-plisovskikh.jpg" alt="Плисовских Алексей, диагност" />
             <p class="contacts__name">Плисовских Алексей</p>
             <p class="contacts__job">диагност</p>
-            <a href="https://vk.com/shifer96" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в VK</a>
+            <a href="https://vk.com/shifer96" target="_blank" rel="noreferrer" class="contacts__connection">Сообщение в
+              VK</a>
             <div class="contacts__connection" id="3">+7 (902) 605-47-42 Показать телефон</div>
           </li>
         </ul>
       </div>
     </section>
+    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда">
+      <div class="address__container">
+        <h1 class="address__title">Будем рады видеть Вас!</h1>
+        <iframe class="address__map"
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__copywriting">
+        <div>
+          <span class="footer__copywriting_date">&copy;&nbsp;{new Date().getFullYear()}</span>
+          <span class="footer__copywriting_name">BGP&nbsp;AUTO</span>
+        </div>
+        <span>created&nbsp;by &nbsp;
+          <a class="footer__copywriting_author" href="https://github.com/Alexandr-Mokhov" target="_blank"
+            rel="noreferrer">
+            Alexander&nbsp;Mokhov
+          </a>
+        </span>
+      </div>
+      <div class="footer__social">
+        <a href="https://vk.com/bgp.auto" target="_blank" rel="noreferrer">
+          <div class="footer__social-icon"></div>
+        </a>
+      </div>
+    </div>
+  </footer>
+  <!-- <footer class="footer">
+    <div class="footer__container">
+      <div class="footer__copywriting">
+        <div>
+          <span>
+            <strong>
+              &copy;&nbsp;{new Date().getFullYear()}
+            </strong>
+          </span>
+          <span class="footer__copywriting_name">
+            <strong>
+              &nbsp;BGP&nbsp;AUTO&nbsp;
+            </strong>
+          </span>
+        </div>
+        <span>created&nbsp;by &nbsp;
+          <a class="footer__copywriting_author" href="https://github.com/Alexandr-Mokhov" target="_blank" rel="noreferrer">
+            Alexander&nbsp;Mokhov
+          </a>
+        </span>
+      </div>
+      <a href="https://vk.com/bgp.auto" target="_blank" rel="noreferrer" class="footer__social-link">
+        <Image
+          class="footer__social-icon"
+          src={logoVk}
+          width={30}
+          height={30}
+          alt="ВКонтакте"
+        />
+      </a>
+    </div>
+  </footer> -->
 </body>
 
 </html>
